@startuml
'https://plantuml.com/class-diagram

abstract class Figure
class Oshape
class Ishape
class Sshape
class Zshape
class Tshape
class Lshape
class Jshape
class Background

Figure <|-- Ishape
Figure <|-- Oshape
Figure <|-- Sshape
Figure <|-- Zshape
Figure <|-- Tshape
Figure <|-- Lshape
Figure <|-- Jshape

Background <|-- Figure


@enduml